# sugar

./: .gitignore  AGENTS.md  CHANGELOG.md  CLA.md  Dockerfile  LICENSE  README.md  VISION.md  pyproject.toml  server.json
.claude-plugin/: IMPLEMENTATION_ROADMAP.md  README.md  marketplace.json  plugin.json
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml  cla.yml
config/: sugar.yaml
docs/: ARCHITECTURE.md  README.md  phase3_sdk_integration.md  ralph-wiggum.md  task-hooks.md  thinking-capture.md
docs/dev/: contributing.md  local-development.md  model-routing-guide.md  phase4-memory-context-injection.md  release-process.md  subagent-implementation.md  testing.md  thinking-capture-implementation.md
docs/user/: cli-reference.md  faq.md  goose.md  installation-guide.md  memory.md  opencode.md  quick-start.md
docs/workflows/: README.md  bug-triage.md  code-quality.md  feature-development.md  security-auto-fix.md  test-coverage.md
examples/: ralph_wiggum_example.py  token_savings_demo.py
research/: deepagents-integration.md  mcp-submission-research.md
sugar/: main.py
sugar/agent/: base.py  hooks.py  subagent_manager.py
sugar/core/: loop.py
sugar/executor/: __init__.py  agent_sdk_executor.py  hooks.py  thinking_display.py
sugar/integrations/: __init__.py
sugar/integrations/opencode/: __init__.py  client.py  config.py  injector.py  models.py  notifier.py
sugar/learning/: learnings_writer.py
sugar/mcp/: __init__.py  memory_server.py  server.py  task_server.py
sugar/memory/: __init__.py  embedder.py  global_store.py  retriever.py  store.py  types.py
sugar/orchestration/: model_router.py  task_orchestrator.py
sugar/quality_gates/: __init__.py  coordinator.py  criteria_templates.py  success_criteria.py  verification_gate.py
sugar/ralph/: __init__.py  config.py  profile.py  signals.py  validator.py
sugar/storage/: issue_response_manager.py  task_type_manager.py  work_queue.py
sugar/triage/: __init__.py  capability_scanner.py  complexity_analyzer.py  triage_analyzer.py
sugar/workflow/: orchestrator.py
tests/: conftest.py  test_agent.py  test_bash_permissions.py  test_cli.py  test_complexity_analyzer.py  test_concurrency.py  test_core_loop.py  test_github_client.py  test_global_memory.py  test_goose_integration.py  test_hold_functionality.py  test_issue_responder_cli.py  test_issue_response_integration.py  test_mcp_integration.py  test_mcp_server.py  test_mcp_task_server.py  test_memory.py  test_model_router.py  test_opencode_integration.py  test_ralph.py  test_storage.py  test_subagent_manager.py  test_task_hooks.py  test_task_types.py  test_thinking_capture.py  test_v3_benchmarks.py
tests/benchmarks/: bench_concurrency.py
